part3/e3.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: image-volume
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo-app
          image: APP-PROJECT/IMAGE
          volumeMounts:
          - name: image-volume
            mountPath: /usr/src/app/files
        - name: todo-backend
          image: BACKEND-PROJECT/IMAGE
